# nlm-ckn-etl

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pom.xml  release.json
.github/: pull.yml
.github/workflows/: build-image.yml  java-build.yml  on-release.yml  promote-to-upstream.yml  python-lint.yml  trigger-release.yml
cloudformation/: batch.yaml  ecr.yaml  fetch.yaml  github-oidc.yaml
data/: hubmap_urls.txt  nlm-ckn-collection-maps.json  open-targets-schema.txt  results-sources-2026-01-06-20260106T085622.json  results-sources-2026-01-06-2e3662470927.json  results-sources-2026-01-06-5611f036a383.json  results-sources-2026-01-06-6253d09e2fc7-test.json  results-sources-2026-01-06-6253d09e2fc7.json  results-sources-full.json  results-sources-sample.json  run-full.json  run-sample.json
data/obo/: deprecated_terms.txt
data/results-2026-01-06/brain/: cell-kn-mvp-map-author-to-cl-jorstad-2023.csv  cell-kn-mvp-nsforest-results-jorstad-2023.csv  cell-kn-mvp-summary-data-jorstad-2023.csv
data/results-2026-01-06/eye/: cell-kn-mvp-map-author-to-cl-li-2023.csv  cell-kn-mvp-nsforest-results-li-2023.csv  cell-kn-mvp-summary-data-li-2023.csv
data/results-2026-01-06/lung/: cell-kn-mvp-annotation-results-2025-03-14.json  cell-kn-mvp-annotation-results-2025-03-14.out  cell-kn-mvp-map-author-to-cl-guo-2023.csv  cell-kn-mvp-map-author-to-cl-sikkema-2023.csv  cell-kn-mvp-nsforest-results-guo-2023.csv  cell-kn-mvp-nsforest-results-sikkema-2023.csv  cell-kn-mvp-summary-data-guo-2023.csv  cell-kn-mvp-summary-data-sikkema-2023.csv
data/results-sample/biomart/: gene_mapping.csv
data/schema/: cell-kn-schema-2024-04-16-author-to-cl.xlsx  cell-kn-schema-2024-04-16-nsforest.xlsx  cell-kn-schema-2024-04-16.json  cell-kn-schema-2024-04-16.xlsx  cell-kn-schema-v0.7.0.xlsx
python/: pyproject.toml
python/src/: .comparison  AnnotationResultsTupleWriter.py  ArangoDbUtilities.py  AuthorToClResultsTupleWriter.py  CellKnSchemaUtilities.py  CellxGeneTupleWriter.py  DataFetcher.py  DataTransformer.py  E_Utilities.py  ExternalApiResultsFetcher.py  ExternalApiResultsTupleWriter.py  GeneTupleWriter.py  HuBMAPTupleWriter.py  InducedGraphBuilder.py  LoaderUtilities.py  MappingTupleWriter.py  NSForestResultsTupleWriter.py  NSForestTupleWriter.py  OldNSForestResultsTupleWriter.py  OntologyParserLoader.py  OpenTargetsGGetQueries.py  OpenTargetsTupleWriter.py  RunTupleWriters.py  TupleWriterPipeline.py  TupleWriterUtilities.py  UniProtTupleWriter.py
python/src/_deprecated/: AnnotationResultsTupleWriter.py  DatasetSummary.py  ExternalApiResultsFetcher.py  NSForestResultsTupleWriter.py  OntologyParserLoader.py  README.md  SchemaBasedTupleWriter.py  SchemaTupleWriter.py
python/src/flows/: README.md  _common.py  fetch.py  pipeline.py  release.py
python/tests/: ArangoDbUtilitiesTestCase.py  AuthorToClResultsTupleWriterTestCase.py  CellxGeneTupleWriterTestCase.py  DataFetcherTestCase.py  DataTransformerTestCase.py  E_UtilitiesTestCase.py  ExternalApiResultsTupleWriterTestCase.py  GeneTupleWriterTestCase.py  HuBMAPTupleWriterTestCase.py  InducedGraphBuilderTestCase.py  LoaderUtilitiesTestCase.py  MappingTupleWriterTestCase.py  NSForestResultsTupleWriterTestCase.py  NSForestTupleWriterTestCase.py  OntologyParserLoaderTestCase.py  OpenTargetsTupleWriterTestCase.py  TupleWriterUtilitiesTestCase.py  UniProtTupleWriterTestCase.py  explore_associations.py
python/tests/_deprecated/: AnnotationResultsTupleWriterTestCase.py  AuthorToClResultsTupleWriterTestCase.py  README.md  compare_fetcher_outputs.py  compare_tuples-2026-04-07.md  compare_tuples.py  explore_associations.py
src/main/shell/: deploy-batch.sh  deploy-fetch.sh  download-arangodb.sh  export-arangodb.sh  fetch-entrypoint.sh  release-entrypoint.sh  start-arangodb.sh  start-jena.sh  start-neo4j.sh  stop-arangodb.sh  stop-jena.sh  stop-neo4j.sh  trigger-release.sh  upload-arangodb.sh  upload-jena.sh  (+1 more)
(+72 files in other folders)
