[tool.poetry]
name = "nlm-ckn-etl"
version = "0.1.0"
description = "Load ontologies and results into an ArangoDB instance"
authors = ["Raymond LeClair <raymond.leclair@springbok.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
arango-rdf = ">=1.0"
ckn-schema = {git = "git@github.com:Springbok-LLC/cell-kn-schema.git", branch = "ralatsdc/remove-drug-molecularly-interacts-with-gene-from-generated-artifacts"}
cellxgene-census = ">=1.14"
gget = ">=0.29"
kgx = {git = "git@github.com:ralatsdc/kgx.git", branch = "master"}
ontogpt = ">=0.3"
plotly = ">=5.22"
pybiomart = ">=0.2"
mysql-connector-python = "9.6.0"
networkx = ">=3.0"
nx-arangodb = ">=1.0"
python-arango = ">=8.1,<9.0.0"
rdflib = ">=7.0"
scanpy = ">=1.10"
scikit-misc = ">=0.3"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.5"
ipython = ">=8.25"
jupyterlab = ">=4.2"
mypy = ">=1.10"
notebook = ">=7.2"
pytest = ">=8.2"
sphinx = ">=8.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
